--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
           <li><a href="https://github.com/abelgomez/emf.utils">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
-      <section></section>
+      <section>
+      <h3>EMF.Utils</h3>
+      <p>Default content</p>
+      </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/abelgomez">abelgomez</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
